use tinc_prefix to get VPN interface name

--- a/templates/shiny.nginx.j2
+++ b/templates/shiny.nginx.j2
@@ -4,7 +4,7 @@
 # {{ ansible_managed }}
 
 server {
-  listen {{ vars['ansible_tinc_' ~ tinc_name]['ipv4']['address'] }}:80;
+  listen {{ vars['ansible_' ~ tinc_prefix ~ tinc_name]['ipv4']['address'] }}:80;
 
   server_name {{ shiny_host }};
 
