--- a/templates/shiny.nginx.j2
+++ b/templates/shiny.nginx.j2
@@ -4,8 +4,9 @@
 # {{ ansible_managed }}
 
 server {
-  listen 443 ssl http2;
-  listen [::]:443 ssl http2;
+{% for listen in shiny_listen %}
+  listen {{ listen }};
+{% endfor %}
 
   server_name {{ shiny_host }};
 
