--- a/templates/shiny.nginx.j2
+++ b/templates/shiny.nginx.j2
@@ -11,7 +11,7 @@ server {
   server_name {{ shiny_host }};
 
   location / {
-    proxy_pass http://localhost:{{ shiny_localport }};
+    proxy_pass http://127.0.0.1:{{ shiny_localport }};
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "upgrade";
