--- a/templates/shiny.nginx.j2
+++ b/templates/shiny.nginx.j2
@@ -3,6 +3,11 @@
 # Nginx config for R Shiny Server
 # {{ ansible_managed }}
 
+map $http_upgrade $connection_upgrade {
+  default upgrade;
+  '' close;
+}
+
 server {
 {% for listen in shiny_listen %}
   listen {{ listen }};
@@ -14,7 +19,8 @@ server {
     proxy_pass http://127.0.0.1:{{ shiny_localport }};
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "upgrade";
+    proxy_set_header Connection $connection_upgrade;
     proxy_read_timeout 2w;
+    proxy_buffering off;
   }
 }
